[project]
name = "llm-sandbox"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "manato-takahashi", email = "manato.takahashi86@gmail.com" }
]
dependencies = [
    "datasets>=2.21.0",
    "transformers>=4.44.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/llm_sandbox"]
